--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "This directive gives you a Bootstrap Dropdown with the power of AngularJS directives.",
 	"homepage": "http://dotansimha.github.io/angularjs-dropdown-multiselect/#/",
 	"dependencies": {
-		"angular": "1"
+		"angular": "2"
 	},
 	"devDependencies": {
 		"babel-core": "6.7.4",
@@ -15,11 +15,11 @@
 		"browser-sync-spa": "1.0.3",
 		"chalk": "1.1.1",
 		"del": "2.0.2",
-		"eslint": "3.17.1",
+		"eslint": "^3.15.0",
 		"eslint-config-airbnb": "14.1.0",
 		"eslint-loader": "1.6.1",
 		"eslint-plugin-angular": "1.5.1",
-		"eslint-plugin-import": "2.2.0",
+		"eslint-plugin-import": "^2.7.0",
 		"eslint-plugin-jsx-a11y": "3.0.2",
 		"eslint-plugin-react": "6.9.0",
 		"estraverse": "4.1.0",
