Form.IO Test App

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "pkempenaers@myforce.be",
+	"author": "navinpath@gmail.com",
 	"name": "angularjs-dropdown-multiselect",
 	"version": "2.0.0-beta.10",
 	"description": "This directive gives you a Bootstrap Dropdown with the power of AngularJS directives.",
