--- a/package.json
+++ b/package.json
@@ -1,81 +1,111 @@
 {
 	"author": "navinpath@gmail.com",
-	"name": "angularjs-dropdown-multiselect",
-	"version": "2.0.0-beta.10",
-	"description": "This directive gives you a Bootstrap Dropdown with the power of AngularJS directives.",
-	
+	  "name": "angularjs-dropdown-multiselect",
+	  "version": "2",
+	  "description": "This directive gives you a Bootstrap Dropdown with the power of AngularJS directives.",
+	  
+	"scripts": {
+	  "ng": "ng",
+	  "start": "ng serve",
+	  "build": "ng build",
+	  "test": "ng test",
+	  "lint": "ng lint",
+	  "e2e": "ng e2e"
+	},
+	"private": true,
 	"dependencies": {
-		"angular": "2"
+	  "@angular/animations": "~11.2.12",
+	  "@angular/common": "~11.2.12",
+	  "@angular/compiler": "~11.2.12",
+	  "@angular/core": "~11.2.12",
+	  "@angular/forms": "~11.2.12",
+	  "@angular/platform-browser": "~11.2.12",
+	  "@angular/platform-browser-dynamic": "~11.2.12",
+	  "@angular/router": "~11.2.12",
+	  "rxjs": "~6.6.0",
+	  "tslib": "^2.0.0",
+	  "zone.js": "~0.11.3"
 	},
 	"devDependencies": {
-		"babel-core": "6.7.4",
-		"babel-loader": "6.2.4",
-		"babel-preset-es2015": "6.6.0",
-		"browser-sync": "2.9.11",
-		"browser-sync-spa": "1.0.3",
-		"chalk": "1.1.1",
-		"del": "2.0.2",
-		"eslint": "^3.15.0",
-		"eslint-config-airbnb": "14.1.0",
-		"eslint-loader": "1.6.1",
-		"eslint-plugin-angular": "1.5.1",
-		"eslint-plugin-import": "^2.7.0",
-		"eslint-plugin-jsx-a11y": "3.0.2",
-		"eslint-plugin-react": "6.9.0",
-		"estraverse": "4.1.0",
-		"gulp": "3.9.0",
-		"gulp-angular-templatecache": "1.8.0",
-		"gulp-autoprefixer": "3.0.2",
-		"gulp-concat": "^2.6.1",
-		"gulp-cssnano": "2.1.1",
-		"gulp-eslint": "3.0.1",
-		"gulp-filter": "3.0.1",
-		"gulp-flatten": "0.2.0",
-		"gulp-htmlmin": "1.3.0",
-		"gulp-inject": "3.0.0",
-		"gulp-load-plugins": "0.10.0",
-		"gulp-protractor": "2.1.0",
-		"gulp-rename": "1.2.2",
-		"gulp-replace": "0.5.4",
-		"gulp-sass": "2.0.4",
-		"gulp-size": "2.0.0",
-		"gulp-sourcemaps": "1.6.0",
-		"gulp-uglify": "1.4.1",
-		"gulp-useref": "3.0.3",
-		"gulp-util": "3.0.6",
-		"http-proxy-middleware": "0.9.0",
-		"karma": "1.5.0",
-		"karma-coverage": "1.1.1",
-		"karma-jasmine": "1.1.0",
-		"karma-ng-html2js-preprocessor": "0.2.0",
-		"karma-phantomjs-launcher": "1.0.2",
-		"karma-phantomjs-shim": "1.4.0",
-		"lodash": "3.10.1",
-		"main-bower-files": "2.9.0",
-		"ng-annotate-loader": "0.0.10",
-		"phantomjs": "2.1.7",
-		"run-sequence": "^1.2.2",
-		"uglify-save-license": "0.4.1",
-		"webpack-stream": "2.1.1",
-		"wiredep": "2.2.2"
+	  "@angular-devkit/build-angular": "~0.1102.11",
+	  "@angular/cli": "~11.2.11",
+	  "@angular/compiler-cli": "~11.2.12",
+	  "@types/jasmine": "~3.6.0",
+	  "@types/node": "^12.11.1",
+	  "codelyzer": "^6.0.0",
+	  "babel-core": "6.7.4",
+		  "babel-preset-es2015": "6.6.0",
+		  "browser-sync": "2.9.11",
+		  "browser-sync-spa": "1.0.3",
+		  "chalk": "1.1.1",
+		  "del": "2.0.2",
+		  "eslint": "^3.15.0",
+		  "eslint-config-airbnb": "14.1.0",
+		  "eslint-loader": "1.6.1",
+		  "eslint-plugin-angular": "1.5.1",
+		  "eslint-plugin-import": "^2.7.0",
+		  "eslint-plugin-jsx-a11y": "3.0.2",
+		  "eslint-plugin-react": "6.9.0",
+		  "estraverse": "4.1.0",
+		  "gulp": "3.9.0",
+		  "gulp-angular-templatecache": "1.8.0",
+		  "gulp-autoprefixer": "3.0.2",
+		  "gulp-concat": "^2.6.1",
+		  "gulp-cssnano": "2.1.1",
+		  "gulp-eslint": "3.0.1",
+		  "gulp-filter": "3.0.1",
+		  "gulp-flatten": "0.2.0",
+		  "gulp-htmlmin": "1.3.0",
+		  "gulp-inject": "3.0.0",
+		  "gulp-load-plugins": "0.10.0",
+		  "gulp-protractor": "2.1.0",
+		  "gulp-rename": "1.2.2",
+		  "gulp-replace": "0.5.4",
+		  "gulp-sass": "2.0.4",
+		  "gulp-size": "2.0.0",
+		  "gulp-sourcemaps": "1.6.0",
+		  "gulp-uglify": "1.4.1",
+		  "gulp-useref": "3.0.3",
+		  "gulp-util": "3.0.6",
+		  "http-proxy-middleware": "0.9.0",
+	  "jasmine-core": "~3.6.0",
+	  "jasmine-spec-reporter": "~5.0.0",
+	  "karma": "~6.1.0",
+	  "karma-chrome-launcher": "~3.1.0",
+	  "karma-coverage": "~2.0.3",
+	  "karma-jasmine": "~4.0.0",
+	  "karma-jasmine-html-reporter": "^1.5.0",
+	  "protractor": "~7.0.0",
+	  "ts-node": "~8.3.0",
+	  "tslint": "~6.1.0",
+	  "typescript": "~4.1.5",
+	  "karma-ng-html2js-preprocessor": "0.2.0",
+		  "karma-phantomjs-launcher": "1.0.2",
+		  "karma-phantomjs-shim": "1.4.0",
+		  "lodash": "3.10.1",
+		  "main-bower-files": "2.9.0",
+		  "ng-annotate-loader": "0.0.10",
+		  "phantomjs": "2.1.7",
+		  "run-sequence": "^1.2.2",
+		  "uglify-save-license": "0.4.1",
+		  "webpack-stream": "2.1.1",
+		  "wiredep": "2.2.2"
 	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
+	  "repository": {
 		"type": "git",
 		"url": "git+https://github.com/navinpath/Angular-Task.git"
-	},
-	"engines": {
-		"node": ">=0.10.10"
-	},
-	"main": "dist/angularjs-dropdown-multiselect.min.js",
-	"keywords": [
+	  },
+	  "engines": {
+		"node": ">=5.0.0"
+	  },
+	  "main": "dist/angularjs-dropdown-multiselect.min.js",
+	  "keywords": [
 		"angular",
 		"multiselect"
-	],
-	"license": "MIT",
-	"bugs": {
+	  ],
+	  "license": "MIT",
+	  "bugs": {
 		"url": "https://github.com/navinpath/Angular-Task/issues"
-	}
-}
+	  }
+  }
+  
