--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "author": "navin.pathak@a1technology.com",
+{ "author": "Navin Pathak",
+  "email": "navin.pathak@a1technology.com",
 	"name": "formio-test-app",
 	"version": "2.0.0-beta.10",
 	"description": "Angular Developer Pre-Interview Task.",
